--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Crud Backend",
-	"dockerComposeFile": "docker-compose.yml",
+	"dockerComposeFile": "../docker-compose.yml",
 	"service": "crud_backend",
 	"workspaceFolder": "/workspace",
 
@@ -29,7 +29,7 @@
 		"DavidAnson.vscode-markdownlint"
 	],
 
-	"postCreateCommand": "bash .devcontainer/post-create.sh",
+	"postCreateCommand": "bash post-create.sh",
 
 	"remoteUser": "vscode"
 }
